actualizacion de dockerfile

--- a/docker/playwright/Dockerfile
+++ b/docker/playwright/Dockerfile
@@ -1,30 +1,14 @@
 # ==========================================
-# Playwright Executor - TMS Automation
+# Playwright Executor 
 # ==========================================
-FROM mcr.microsoft.com/playwright:v1.57.0-jammy
 
-USER root
+FROM mcr.microsoft.com/playwright:v1.58.2-jammy
 
 WORKDIR /app
 
-# Copiamos solo package para cache
 COPY package*.json ./
+RUN npm ci
 
-# Instalamos dependencias (incluye allure-playwright)
-RUN npm install
-
-# VERIFICACIÓN CLAVE (falla el build si no existe)
-RUN npm list allure-playwright
-
-# Copiamos el resto del proyecto
 COPY . .
 
-# Directorios de salida (se llenan en runtime)
-RUN mkdir -p /app/allure-results /app/test-results
-
-# Variables de entorno recomendadas
-ENV ALLURE_RESULTS_DIR=/app/allure-results
-ENV PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
-
-# Comando por defecto
 CMD ["npx", "playwright", "test"]
